<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/settings"
        android:textSize="@dimen/settingsTextView_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/inputTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/om1"
        android:gravity="bottom|end"
        android:text="@string/first_element"
        android:textSize="@dimen/inputTextView_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_btn_text"
            android:textColor="#F44336" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plusMinBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_min_btn_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/percentBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/percent_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div_btn_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sevenBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eightBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nineBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fourBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fiveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sixBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtraction_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/oneBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twoBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/threeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three_btn_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/additionBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addition_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zeroBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doubleZeroBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/double_zero_btn_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dotBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot_btn_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resultBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result_btn_text"
            android:textColor="#FF9800"/>

    </LinearLayout>


</LinearLayout>