<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme"
        android:textSize="30sp"/>

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnWhiteTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_theme"
            android:textSize="@dimen/radio_btn_text_size"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textSize="@dimen/radio_btn_text_size"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="@dimen/back_button_text_size"
        android:layout_gravity="center" />

</LinearLayout>